# prakiraan-cuaca-bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/: exceptions.py  main.py  query.py  service.py  utils.py
src/bot/: bot_handler.py  bot_state_handler.py  router.py
src/models/: commands.py  contexts.py  domain_model.py  dt_model.py  protocols.py
tests/: test_query_builder.py
