[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prakiraan-cuaca-bot"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "python-telegram-bot>=22.8",
    "sqlalchemy>=2.0.50",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.2"
]

[project.scripts]
run_bot = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest_asyncio>=1.3.0",
    "mypy>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true